# All_My_Works

AI/: ДЗ_Матвиенко_Владислав_Евгеньевич.ipynb  КР_Матвиенко_Владислав.ipynb  КР_Матвиенко_Владислав_Евгеньевич.ipynb  Копия_блокнота__GAN_ipynb_.ipynb  СР_Матвиенко_Владислав_Евгеньевич.ipynb  Самостоятельная_работа_НСТ_3курс.ipynb
AI/Машинное обучение/: 11_11_линейная_регрессия.ipynb  Linear_Regression.ipynb  Linear_Regression_2.ipynb  Матвиенко_Владислав_3.ipynb  №5_1.ipynb
AI/Экзамен нейросетевые технологии/: Матвиенко_Владислав_экзамен.ipynb
C++/: Tic2.cpp  demo.cpp  hi.cpp
C++/HW1/: Task 1.cpp  Task 10.cpp  Task 11.cpp  Task 2.cpp  Task 3.cpp  Task 4.cpp  Task 5.cpp  Task 6.cpp  Task 7.cpp  Task 8.cpp  Task 9.cpp
C++/Новая папка/: BinnaryTreeSort.cpp  BubbleSort.cpp  Quicksort.cpp
HTML/Курсовая 2/: Задания на КР Матвиенко В. Е. 22БИ-3.docx  Курсовая_работа_Матвиенко_22БИ-3.docx  Отзыв_Матвиенко_В_Е.docx  Шаблон отзыва руководителя с базы практики.docx
Python/: convert_csv_to_xlsx.py  delete_half_csv_random.py  main.py  Квадратное уравнение.py
Python/Pythonchik/: 1.py  2.py  3.py  4.py
Python/SR5/: Survival.py  Правление Александра II.docx
Python/SR6/: TheWork.py
Python/SuperSR4/: 1.py  2.py  Bonus.py
Python/Test/: 4484.py  5548.py
Python/pythonProject/: file_db.py  main.py
Python/pythonProject 1/: main.py
Python/Основы Программирования/: welcome_3.py  welcome_3_1_ifelse.py  welcome_3_2_functions.py  welcome_3_2_lambda.py  (+4 more)
SQL/Управление Данными/Lab_6/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  KartingCenterGUI.cpp
(+370 files in other folders)
